[css] Fix spacing between WiFi bars
This has been broken for a while, the fix is to remove padding. I also
removed two properties. One is border-radius which basically isn't
noticeable, the last was a float which didn't seem to do anything.

--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -158,10 +158,9 @@
 
 .rssi-bar {
     position: absolute;
+    padding: 0;
     bottom: 0;
-    float: left;
     width: 4px;
-    border-radius: 1px;
     background-color: #444;
 }
 
